fix: better vertically align microsite header version menus

--- a/src/components/version-language-switcher/version-language-switcher.css
+++ b/src/components/version-language-switcher/version-language-switcher.css
@@ -30,12 +30,10 @@
 }
 
 .version-language-switcher {
-    height: 20px;
     display: flex;
     flex-direction: row;
     align-items: center; /* vertically align content */
     gap: var(--goa-space-s);
-    margin-bottom: var(--goa-space-xs);
 }
 
 @media (max-width: 623px) {
